compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__consts__constant_tuple_with_constructors_gets_pure_annotation.snap
---
source: compiler-core/src/javascript/tests/consts.rs
expression: "\npub record X {\n  X(Int, List<String>)\n}\n\npub const x = #(X(1, [\"1\"]))\nconst y = #(X(1, [\"1\"]))\n        "
---
import { toList, CustomType as $CustomType } from "../rakun.mjs";

export class X extends $CustomType {
  constructor(x0, x1) {
    super();
    this[0] = x0;
    this[1] = x1;
  }
}

export const x = [/* @__PURE__ */ new X(1, /* @__PURE__ */ toList(["1"]))];

const y = [/* @__PURE__ */ new X(1, /* @__PURE__ */ toList(["1"]))];
