compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__consts__constructor_function_in_constant.snap
---
source: compiler-core/src/javascript/tests/consts.rs
assertion_line: 127
expression: pub const a = Ok
---
import { Ok } from "../rakun.mjs";

export const a = (var0) => { return new Ok(var0); };
